# SecretBook

./: .gitignore  README.md  main.py  pyproject.toml
ui/: __init__.py  login_dialog.py  main_window.py  password_dialog.py
ui/components/: menu_manager.py  password_table.py  toolbar.py
ui/handlers/: import_export_handler.py  password_handler.py
utils/: crypto.py  data_manager.py  icon_manager.py  styles.py
